--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@preact/signals-react": "^1.2.2",
+    "fast-deep-equal": "^3.1.3",
     "lottie-web": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "spectacle": "^9.7.0",
-    "spectacle-code-slide": "^0.5.2"
+    "spectacle-code-slide": "^0.5.2",
+    "use-deep-compare-effect": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
